--- a/wiki/ABriefIntroduction.wiki
+++ b/wiki/ABriefIntroduction.wiki
@@ -1,6 +1,8 @@
+#summary A brief introduction to Big Visible Cruise
+
 =What Is BVC?=
 
-BVC simply shows the status of your build at a specific moment in time. It's green (successful), yellow (building), or red (broken or has an exception). BVC will display all of the projects that are at the url that you provide.
+BVC simply shows the status of your build at a specific moment in time. It's either green, yellow, or red. BVC will display all of the projects that are at the url that you provide.
 
 BVC has a very simple and informative interface. A new row is added to the screen for each of the projects hosted in CCNet. The color of each row indicates the status of the build.
 
@@ -9,7 +11,7 @@ BVC has a very simple and informative interface. A new row is added to the scree
 ||Yellow||Building||
 ||Red||Broken Build or Exception||
 
-BVC was intended to run full-screen on a dedicated monitor.#summary A brief introduction to Big Visible Cruise
+BVC was intended to run full-screen on a dedicated monitor.
 
 =Why BVC Was Created=
 
