--- a/wiki/ABriefIntroduction.wiki
+++ b/wiki/ABriefIntroduction.wiki
@@ -13,14 +13,10 @@ BVC has a very simple and informative interface. A new row is added to the scree
 
 BVC was intended to run full-screen on a dedicated monitor.
 
-=Why BVC Was Created=
+=Setting Up BVC=
 
-Big Visible Cruise was created as an alternative (or an addition to) the information radiators that are typically used for continuous integration. While I certainly love Nabaztag (http://www.nabaztag.com/en/index.html), Orbs (http://www.ambientdevices.com/cat/orb/orborder.html), and Lava Lamps (http://www.pragmaticautomation.com/cgi-bin/pragauto.cgi) - I also think there is a place for a simple big screen of information that shows the status of your build or builds.
+Setting up the application is easy. Very Easy. Copy the distribution from the Downloads page (http://code.google.com/p/bigvisiblecruise/downloads), unzip it, add the url for CCNet, and run !BigVisibleCruise.exe.
 
-The sweet spot for BVC is a team room or on a monitor that is visible to multiple individuals. I'm currently using BVC with CCTray to provide a good visual with good auditory feedback of the build status.
-
-=How Hard Is It To Setup And Configure?=
-
-Easy. Very Easy. Copy the distribution from the Downloads page (http://code.google.com/p/bigvisiblecruise/downloads), unzip it, add the url for CCNet, and run !BigVisibleCruise.exe.
+=Dependencies For Running BVC=
 
 The Big Visible Cruise display makes use of the REST-style interface exposed from CCNet. All of the CCNet builds that are 1.1 or later should support this interface. To see if your CCNet instance exposes this interface, try and browse to {{{http://<server>/ccnet/XmlStatusReport.aspx}}}.
