--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -2,8 +2,12 @@
 
 Here are a few pictures of BVC in action...
 
-=Multiple Projects View=
+=Single CI Project View=
 
-The following screen shot shows three projects being monitored by BVC. Foo and Bar are successful while Some Project is broken.
+The following screen shot shows one project being monitored.
+
+=Multiple CI Project View=
+
+The following screen shot shows three projects being monitored. _Foo_ and _Bar_ are successful while _Some Project_ is broken.
 
 http://farm3.static.flickr.com/2348/2049317643_b88769c777.jpg?v=0
