--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -12,12 +12,12 @@ The following screen shot shows three projects being monitored. _Foo_ and _Bar_ 
 
 http://farm3.static.flickr.com/2048/2051934122_85cd442f06_o.jpg
 
+Here is an example of a project building. _Build One_ is building, _Build Two_ and _Build Three_ are successful.
+
+http://farm3.static.flickr.com/2102/2052800584_73010938ee.jpg
+
 =Lots Of Projects View=
 
 The following screen shot shows 8 projects being monitored. This is the view of http://ccnetlive.thoughtworks.com/ccnet/...
 
 http://farm3.static.flickr.com/2245/2051148469_f69f401617_o.jpg
-
-Another example (with successful, broken, and an unknown status)...
-
-http://farm3.static.flickr.com/2227/2052036972_55e585a6f6_o.jpg
