Edited wiki page through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,5 +1,8 @@
 #summary Information on different releases of BVC.
 
+==0.4==
+
+ * Added handling of intermittent connectivity issues.
 
 ==0.3==
 
