--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -8,5 +8,4 @@ Here are a few pictures of BVC in action...
 || Broken (or Exception) with 1 Project || http://farm3.static.flickr.com/2299/2057310313_5e766e8740_o.png ||
 || Multiple Projects (Successful and Broken) || http://farm3.static.flickr.com/2048/2051934122_85cd442f06_o.jpg ||
 || Multiple Projects (Building and Broken) || http://farm3.static.flickr.com/2102/2052800584_73010938ee.jpg ||
-|| Connectivity Issue (This message will pulsate while retries are being performed ||
-http://farm3.static.flickr.com/2399/2086874684_80f1d0bb48_o.jpg ||
+|| Connectivity Issue (This message will pulsate while retries are being performed) || http://farm3.static.flickr.com/2399/2086874684_80f1d0bb48_o.jpg ||
