Edited wiki page through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -4,7 +4,7 @@
 
  * Support for monitoring of other cruise implementations (java, .rb, etc.) as long as they have the capability to publish the expected xml format.
 
-==0.4==
+==0.4 (Last Release)==
 
  * Added handling of intermittent connectivity issues.
 
