--- a/wiki/BriefIntroduction.wiki
+++ b/wiki/BriefIntroduction.wiki
@@ -20,7 +20,11 @@ Setting up the application is easy. Very Easy. Copy the distribution from the Do
 
 =Dependencies For Running BVC=
 
-The Big Visible Cruise display makes use of the REST-style interface exposed from Cruise. All of the Cruise builds that are 1.1 or later should support this interface. To see if your CCNet instance exposes this interface, try and browse to {{{http://<server>/ccnet/XmlStatusReport.aspx}}}.
+The Big Visible Cruise display makes use of the REST-style interface exposed from Cruise. All of the recent Cruise builds should support this interface. To see if your Cruise instance exposes this interface, try and browse to ...
+
+ * .CCNet: {{{http://<server>/<ccnet dir>/XmlStatusReport.aspx}}}
+ * .rb: {{{http://<server>/<cruise dir>/XmlStatusReport.aspx}}}
+ * Cruise (Java): {{{http://<server>/<cruise dir>/xml}}}
 
 You'll also need .Net 3.0 installed.
 
