--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -3,6 +3,10 @@
 ==0.6 (In The Trunk)==
  * Support for full-screen toggle with the F11 key (contribution). Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=14
 
+ * Added uniform grid visualization. Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=13
+
+ * Put in ability to dynamically load skins for alternate visualizations.
+
 ==0.5 (Current Release)==
 
  * Support for monitoring of other cruise implementations (java, .rb, etc.) as long as they have the capability to publish the expected xml format.
