--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,8 +1,8 @@
 #summary Information on different releases of BVC.
 
-==0.7 (In The Trunk)
+==0.7 (In The Trunk)==
 
-==0.6
+==0.6==
  * Support for full-screen toggle with the F11 key (contribution). Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=14
 
  * Added uniform grid visualization. Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=13
