Edited wiki page through web user interface.

--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -8,4 +8,5 @@ Here are a few pictures of BVC in action...
 || Broken (or Exception) with 1 Project || http://farm3.static.flickr.com/2299/2057310313_5e766e8740_o.png ||
 || Multiple Projects (Successful and Broken) || http://farm3.static.flickr.com/2048/2051934122_85cd442f06_o.jpg ||
 || Multiple Projects (Building and Broken) || http://farm3.static.flickr.com/2102/2052800584_73010938ee.jpg ||
-|| Connectivity Issue (This message will pulsate while retries are being performed) || http://farm3.static.flickr.com/2399/2086874684_80f1d0bb48_o.jpg ||
+|| Uniform Status Skin || http://farm3.static.flickr.com/2051/2109487916_863329aeee.jpg?v=0 ||
+|| Connectivity Issue (This message will show while retries are being performed) || http://farm3.static.flickr.com/2399/2086874684_80f1d0bb48_o.jpg ||
