Edited wiki page through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,15 +1,25 @@
 #summary Information on different releases of BVC.
 
-==0.7 (In The Trunk)==
+==0.7 ==
 
-==0.6==
+ * Lots of minor coding tweaks and reshuffling.
+
+ * Added gui for settings configuration
+
+ * Added keybindings for fullscreen, options, refresh
+
+ * Removed some of the little-used features in the config (rename / filter functionality)
+
+ * Moved settings to user-specific instead of machine-specific
+
+==0.6 ==
  * Support for full-screen toggle with the F11 key (contribution). Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=14
 
  * Added uniform grid visualization. Enhancement from http://code.google.com/p/bigvisiblecruise/issues/detail?id=13
 
  * Put in ability to load skins for alternate visualizations.
 
-==0.5 (Current Release)==
+==0.5 ==
 
  * Support for monitoring of other cruise implementations (java, .rb, etc.) as long as they have the capability to publish the expected xml format.
 
