--- a/wiki/BriefIntroduction.wiki
+++ b/wiki/BriefIntroduction.wiki
@@ -20,7 +20,7 @@ http://farm3.static.flickr.com/2015/2514731478_13114b868d.jpg
 
 =Setting Up BVC=
 
-Setting up the application is easy. Very Easy. Copy the distribution from the Downloads page (http://code.google.com/p/bigvisiblecruise/downloads), unzip it, add the url for the Cruise project xml, and run !BigVisibleCruise.exe.
+Setting up the application is easy. Very Easy. Copy the distribution from the Downloads page (http://code.google.com/p/bigvisiblecruise/downloads), unzip it, and run !BigVisibleCruise.exe.
 
 =Shortcuts=
 All the interaction with BVC can be done easily using keyboard shortcuts. There are only a few things that you can do, so these key combos are displayed on the bottom of the screen in very small type.
@@ -28,20 +28,24 @@ All the interaction with BVC can be done easily using keyboard shortcuts. There 
 || *Shortcut Key* || *Functionality* ||
 ||F5||Forces a refresh (regardless of poll interval)||
 ||F11||Toggle Fullscreen Mode||
-||F12||Open the options window||
+||F12||Open the settings window||
 
 =Configuring BVC=
 
-F12 brings up the configuration...
+The "Open BVC Settings" link (or F12) brings up the configuration...
 
-http://farm3.static.flickr.com/2160/2513907207_0d32a88e91_o.png
+http://farm4.static.flickr.com/3174/2566075209_d3bab2f83e.jpg?v=0
 
 The options that are available are:
 
 || *Field* || *Meaning* ||
-||Auto Refresh Rate||The frequency that BVC will poll for status (hh:mm:ss)||
-||Xml Url||This is the url to the xml status (e.g. http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx) ||
-||Skin||The view for seeing the current status||
+||Dashboard Url||This is the url to the Cruise dashboard (e.g. http://ccnetlive.thoughtworks.com/ccnet) ||
+||Check Status||The slider will adjust the frequency that BVC will poll for status updates.||
+||Visual Appearance||The view for seeing the current status. If you have multiple projects, they can have a stacked view or a uniform view.||
+
+The "Validate Url" link will check for successful communication with the Cruise dashboard. If something goes wrong, you will receive an error message regarding the issue.
+
+The "Save" button will save the valid settings. If the Dashboard Url is not valid, it *will not* be saved.
 
 Clicking the save button will apply changes immediately.
 
@@ -49,14 +53,16 @@ Clicking the save button will apply changes immediately.
 
 The Big Visible Cruise display makes use of the REST-style interface exposed from Cruise. All of the recent Cruise builds should support this interface. To see if your Cruise instance exposes this interface, try and browse to ...
 
- * .CCNet: {{{http://<server>/<ccnet dir>/XmlStatusReport.aspx}}}
- * .rb: {{{http://<server>/<cruise dir>/XmlStatusReport.aspx}}}
- * Cruise (Java): {{{http://<server>/<cruise dir>/xml}}}
+ * {{{http://<server>/<ccnet dir>/XmlStatusReport.aspx}}}
 
-You'll also need .Net 3.0 installed.
+You'll also need .Net 3.5 installed.
 
 =Developing For BVC=
 
-The source is provided as a VS2005 solution and uses the WPF Extensions for .Net Framework 3.0. This will be upgraded to 2008 as soon as someone requests it or when I take the time to upgrade to 2008.
+The source is provided as a VS2008 solution.
 
-If you would like to submit modifications, patches are appreciated.
+If you would like to submit modifications, patches are appreciated. If you think something can be done better, please feel free to tell me. I'm a WPF newb, so I'm sure I've made a lot of mistakes.
+
+If you are submitting a patch, please include the associated tests.
+
+If you have an idea for a visualization, feel free to hack one together and send it to me. There's a lot of improvement that can be done here.
