--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,7 +1,11 @@
 #summary Information on different releases of BVC.
 
+==1.3 - in progress == 
 
-==1.2 - in progress == 
+ * General code cleanup (patch from spurrymoses).
+ * Added the ability to filter projects (see the config file).
+
+==1.2 == 
 
  * Removed validation. It was busted anyway.
 
