--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -4,7 +4,7 @@
 
  * General code cleanup (patch from spurrymoses).
  * Added the ability to filter projects (see the config file).
- * Fix for 100% CPU utilization
+ * Fix for 100% CPU utilization (http://code.google.com/p/bigvisiblecruise/issues/detail?id=37)
 
 ==1.2 == 
 
